<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="12dp"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="12dp"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/location_movies_list_ico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_combined_shape"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@+id/location_movies_list_text"
            app:layout_constraintBottom_toBottomOf="@+id/location_movies_list_text"
            app:layout_constraintStart_toEndOf="@+id/guideline_start"
            android:contentDescription="@string/location_movies_list_icon" />

        <TextView
            android:id="@+id/location_movies_list_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/location_movies_list_text"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="55dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/location_movies_list_ico"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movie_card"
            android:layout_width="170dp"
            android:layout_height="296dp"
            android:layout_marginTop="27dp"
            app:layout_constraintTop_toBottomOf="@+id/location_movies_list_text"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            android:background="@drawable/movie_card_background">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_card_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="8dp"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_card_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="8dp"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_card_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_end="48dp" />

            <TextView
                android:id="@+id/movie_card_age_limitation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/age_limitation_background"
                android:padding="4dp"
                android:text="@string/age_limitation"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/guideline_card_start"
                app:layout_constraintEnd_toStartOf="@id/guideline_card_end"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_like"
                app:layout_constraintTop_toTopOf="@+id/movie_card_age_limitation"
                app:layout_constraintBottom_toBottomOf="@+id/movie_card_age_limitation"
                app:layout_constraintEnd_toStartOf="@id/guideline_card_end"
                android:contentDescription="@string/like" />

            <TextView
                android:id="@+id/tags"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/movie_card_tags"
                android:textColor="@color/second_main_color"
                android:textSize="8sp"
                app:layout_constraintStart_toEndOf="@id/guideline_card_start"
                app:layout_constraintEnd_toStartOf="@id/guideline_card_end"
                app:layout_constraintBottom_toTopOf="@+id/number_of_reviews" />

            <ImageView
                android:id="@+id/review_star1"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:src="@drawable/ic_star"
                app:layout_constraintTop_toTopOf="@+id/number_of_reviews"
                app:layout_constraintBottom_toBottomOf="@id/number_of_reviews"
                app:layout_constraintStart_toEndOf="@id/guideline_card_start" />

            <ImageView
                android:id="@+id/review_star2"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginStart="3dp"
                android:src="@drawable/ic_star"
                app:layout_constraintTop_toTopOf="@+id/review_star1"
                app:layout_constraintBottom_toBottomOf="@id/review_star1"
                app:layout_constraintStart_toEndOf="@+id/review_star1" />

            <ImageView
                android:id="@+id/review_star3"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginStart="3dp"
                android:src="@drawable/ic_star"
                app:layout_constraintTop_toTopOf="@+id/review_star1"
                app:layout_constraintBottom_toBottomOf="@id/review_star1"
                app:layout_constraintStart_toEndOf="@+id/review_star2" />

            <ImageView
                android:id="@+id/review_star4"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginStart="3dp"
                android:src="@drawable/ic_star"
                app:layout_constraintTop_toTopOf="@+id/review_star1"
                app:layout_constraintBottom_toBottomOf="@id/review_star1"
                app:layout_constraintStart_toEndOf="@+id/review_star3" />

            <ImageView
                android:id="@+id/review_star5"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginStart="3dp"
                android:src="@drawable/ic_star"
                app:tint="@color/inactive_star_color"
                app:layout_constraintTop_toTopOf="@+id/review_star1"
                app:layout_constraintBottom_toBottomOf="@id/review_star1"
                app:layout_constraintStart_toEndOf="@+id/review_star4"/>

            <TextView
                android:id="@+id/number_of_reviews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/_125_reviews"
                android:textSize="8sp"
                android:textAllCaps="true"
                android:textColor="@color/third_main_color"
                app:layout_constraintBottom_toTopOf="@id/guideline_card_reviews"
                app:layout_constraintStart_toEndOf="@+id/review_star5"
                app:layout_constraintEnd_toStartOf="@id/guideline_card_end"/>

            <TextView
                android:id="@+id/movie_card_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/movie_title_avengers_end_game"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/guideline_card_start"
                app:layout_constraintEnd_toStartOf="@id/guideline_card_end"
                app:layout_constraintTop_toBottomOf="@id/guideline_card_reviews"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/card_minutes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/movie_card_minutes"
                android:textColor="#565665"
                android:textSize="8sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                app:layout_constraintStart_toEndOf="@id/guideline_card_start"
                app:layout_constraintEnd_toStartOf="@id/guideline_card_end"
                app:layout_constraintBottom_toBottomOf="parent"/>





        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>